# pokerithm

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/plans/: 2026-03-01-ev-decision-engine-design.md
src/pokerithm/: __init__.py  action.py  ai_bot.py  betting.py  bot.py  calculator.py  card.py  cli.py  config.py  decision.py  deck.py  evaluator.py  hand.py  nash_ranges.py  player.py  position.py  pot.py  ranges.py  sim_display.py  table.py  tournament.py
tests/: test_betting.py  test_bot.py  test_calculator.py  test_card.py  test_decision.py  test_evaluator.py  test_hand.py  test_nash_ranges.py  test_position.py  test_pot.py  test_table.py  test_tournament.py
